# garagem_modelo

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_acessorio_cor_veiculo.py  0003_alter_veiculo_ano_alter_veiculo_preco.py  0004_alter_acessorio_options_alter_cor_options_and_more.py  0005_modelo.py  0006_modelo_categoria_modelo_marca_and_more.py  0007_remove_veiculo_categoria_remove_veiculo_marca_and_more.py  0008_veiculo_modelo.py  0009_veiculo_descricao.py
