[tool.pdm]
[tool.pdm.dev-dependencies]
format = [
    "isort>=5.11.3",
    "black>=22.12.0",
]
dev = [
    "editorconfig>=0.12.3",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "black>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco André Mendes", email = "marcoandre@gmail.com"},
]
dependencies = [
    "django>=4.1.4",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[[tool.pdm.autoexport]]
filename = "requirements.txt"
groups = ["default"]

[tool.pdm.scripts]
startapp = "python manage.py startapp {args}"
runserver = "python manage.py runserver"
dev = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
createsuperuser = "python manage.py createsuperuser"
test = "python manage.py test"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"
